<resources>
    <string name="app_name">UnitConverter2.0</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="action_settings">Settings</string>
    <string-array name="fragmentTitles">
        <item>General Unit Converter</item>
        <item>Date Calculator</item>
        <item>Currency Converter</item>
    </string-array>
    <string name="display">a;lkdjfalksdjfl;adsjflk;js</string>
    <string name="category_prompt">Choose a category</string>
    <string-array name="categories">
        <item>Weight</item>
        <item>Volume</item>
        <item>Distance</item>
        <item>Temperature</item>
        <item>Programming</item>
    </string-array>
    <string name="optionsHint">Type in a value</string>
    <string-array name="weight">
        <item>Kilogram</item>
        <item>Gram</item>
        <item>Milligram</item>
        <item>Microgram</item>
        <item>Metric ton</item>
        <item>US Ton</item>
        <item>Pound</item>
        <item>Ounce</item>
        <item>Stone</item>
    </string-array>
    <string-array name="volume">
        <item>US gallon</item>
        <item>US quart</item>
        <item>US pint</item>
        <item>US cup</item>
        <item>US fluid ounce</item>
        <item>US tbsp</item>
        <item>US tsp</item>
        <item>US Ton</item>
        <item>Liters</item>
        <item>mL</item>
    </string-array>
    <string-array name="distance">
        <item>Mile</item>
        <item>Yard</item>
        <item>Feet</item>
        <item>Inch</item>
        <item>Kilometer</item>
        <item>Meter</item>
        <item>Centimeter</item>
        <item>Millimeter</item>
        <item>Micrometer</item>
        <item>Nanometer</item>
        <item>Knots</item>
    </string-array>
    <string-array name="temperature">
        <item>Fahrenheit</item>
        <item>Celsius</item>
        <item>Kelvin</item>
    </string-array>
    <string-array name="programming">
        <item>Binary</item>
        <item>Hex</item>
        <item>Decimal</item>
    </string-array>
    <string name="clear">Clear</string>
    <string name="clearA">Clear A</string>
    <string name="clearB">Clear B</string>
    <string name="compute">Compute</string>
    <string name="same_category">Same category, please choose a different category</string>
    <string name="no_text_entered">No text entered</string>
    <string name="both_entered">Please clear 1 text field</string>
    <string name="incorrect_format">Incorrect format/Bad input</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="starting_day">02/02/0000</string>
    <string name="ending_day">02/02/0000</string>
    <string name="checkbox">Include end date in calculation (1 day is added)</string>
    <string name="result_text"></string>
    <string name="result_text_details"></string>
    <string name="calculate_duration">Calculate duration</string>
    <string name="alert_dialog_title">Set a date (mm/dd/yyyy)</string>
    <string name="alert_dialog_save">Save</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string-array name="alert_dialog_days">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="alert_dialog_months">
        <item>Jan.</item>
        <item>Feb.</item>
        <item>Mar.</item>
        <item>Apr.</item>
        <item>May</item>
        <item>Jun.</item>
        <item>Jul.</item>
        <item>Aug.</item>
        <item>Sept.</item>
        <item>Oct.</item>
        <item>Nov.</item>
        <item>Dec.</item>
    </string-array>
    <string-array name="alert_dialog_years">
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
    </string-array>
    <string-array name="currencies_all">
        <item>USD (US Dollar)</item>
        <item>EUR (Euro)</item>
        <item>JPY (Japanese Yen)</item>
        <item>GBP (British Pound)</item>
        <item>CAD (Canadian)</item>
        <item>CHF (Swiss Franc)</item>
        <item>AUD (Australian Dollar)</item>
        <item>BGN (Bulgarian Lev)</item>
        <item>BRL (Brazilian Real)</item>
        <item>CNY (Chinese Yuan)</item>
        <item>CZK (Czech Koruna)</item>
        <item>DKK (Danish Krone)</item>
        <item>HKD (Hong Kong Dollar)</item>
        <item>HUF (Hungarian Forint)</item>
        <item>IDR (Indonesian Rupiah)</item>
        <item>ILS (Israeli Shekel)</item>
        <item>INR (Indian Rupee)</item>
        <item>KRW (South Korean Won)</item>
        <item>MXN (Mexican Peso)</item>
        <item>MYR (Malaysian Ringgit)</item>
        <item>NOK (Norwegian Krone)</item>
        <item>NZD (New Zealand Dollar)</item>
        <item>PHP (Philippine Peso)</item>
        <item>PLN (Polish Zloty)</item>
        <item>RON (Romanian Leu)</item>
        <item>RUB (Russian Ruble)</item>
        <item>SEK (Swedish Krona)</item>
        <item>SGD (Singapore Dollar)</item>
        <item>THB (Thai Baht)</item>
        <item>TRY (Turkish Lira)</item>
        <item>ZAR (South African Rand)</item>
    </string-array>
    <string-array name="currencies_abbrev">
        <item>USD</item>
        <item>EUR</item>
        <item>JPY</item>
        <item>GBP</item>
        <item>CAD</item>
        <item>CHF</item>
        <item>AUD</item>
        <item>BGN</item>
        <item>BRL</item>
        <item>CNY</item>
        <item>CZK</item>
        <item>DKK</item>
        <item>HKD</item>
        <item>HUF</item>
        <item>IDR</item>
        <item>ILS</item>
        <item>INR</item>
        <item>KRW</item>
        <item>MXN</item>
        <item>MYR</item>
        <item>NOK</item>
        <item>NZD</item>
        <item>PHP</item>
        <item>PLN</item>
        <item>RON</item>
        <item>RUB</item>
        <item>SEK</item>
        <item>SGD</item>
        <item>THB</item>
        <item>TRY</item>
        <item>ZAR</item>
    </string-array>

</resources>
